# repo_desafio_1

./: DESAFIO 1.docx  LICENSE  README.md  ~$SAFIO 1.docx
desafio1_tetris/: CMakeLists.txt  juego.cpp  juego.h  main.cpp  pieza.cpp  pieza.h  tablero.cpp  tablero.h
